added icons and font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common_style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,600;0,700;1,100;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
@@ -16,11 +29,23 @@
         </div>
         <div class="search-product arrange-left width-50">
           <input type="text" placeholder="Search for Products" />
-          <button>Search</button>
+          <button>
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </div>
         <div class="selected-product arrange-left width-25">
-          <button class="common-button"><span>0</span></button>
-          <button class="common-button"><span>0</span></button>
+          <button class="common-button">
+            <span>
+              <i class="fa-solid fa-cart-arrow-down"></i>
+              0
+            </span>
+          </button>
+          <button class="common-button">
+            <span>
+              <i class="fa-solid fa-heart"></i>
+              0
+            </span>
+          </button>
         </div>
       </div>
     </div>
