--- a/index.html
+++ b/index.html
@@ -49,5 +49,26 @@
         </div>
       </div>
     </div>
+    <div class="full-banner-wrapper">
+      <div class="wrapper next-row">
+        <div class="banner-area category-list width-25 arrange-left">
+          <div class="list-header">
+            <h4>Categories</h4>
+            <span>
+              <i class="fa-solid fa-angle-down"></i>
+            </span>
+          </div>
+          <ul>
+            <li><a href="#">Shirts</a></li>
+            <li><a href="#">T-Shirts</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Smartphones</a></li>
+            <li><a href="#">Laptops</a></li>
+            <li><a href="#">Jackets</a></li>
+            <li><a href="#">Kitchen</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
