added banner and updated categories for Animes

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
             </span>
           </div>
           <ul>
-            <li><a href="#">Shirts</a></li>
-            <li><a href="#">T-Shirts</a></li>
-            <li><a href="#">Shoes</a></li>
-            <li><a href="#">Smartphones</a></li>
-            <li><a href="#">Laptops</a></li>
-            <li><a href="#">Jackets</a></li>
-            <li><a href="#">Kitchen</a></li>
+            <li><a href="#">One Piece</a></li>
+            <li><a href="#">Naruto</a></li>
+            <li><a href="#">DragonBall Z</a></li>
+            <li><a href="#">My Hero Academia</a></li>
+            <li><a href="#">Death Note</a></li>
+            <li><a href="#">One Punch Man</a></li>
+            <li><a href="#">Attack On The Titans</a></li>
+            <li><a href="#">Haikyu</a></li>
           </ul>
         </div>
         <div class="width-75 arrange-left">
@@ -89,6 +90,14 @@
               <li><a href="#">Login</a></li>
               <li><a href="#">Register</a></li>
             </ul>
+          </div>
+          <div class="banner">
+            <img src="./resources/banner.jpg" alt="banner" />
+            <div class="banner-text">
+              <h4>Flat rs. 200 off on your first order</h4>
+              <h3>High quality action figures</h3>
+              <a class="shop-now" href="#">Shop Now</a>
+            </div>
           </div>
         </div>
       </div>
