added fetaures section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,40 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="width-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-check"></i>
+              <span>Quality Products</span>
+            </span>
+          </div>
+        </div>
+        <div class="width-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-shipping-fast"></i>
+              <span>Free Shipping</span>
+            </span>
+          </div>
+        </div>
+        <div class="width-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-exchange-alt"></i>
+              <span>7 Days Return</span>
+            </span>
+          </div>
+        </div>
+        <div class="width-25 arrange-left">
+          <div class="features-point">
+            <span class="icon-text-wrap">
+              <i class="fa-solid fa-phone"></i>
+              <span>24/7 Support</span>
+            </span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
