added category items

--- a/index.html
+++ b/index.html
@@ -135,6 +135,41 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="width-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">20 Products</div>
+            <div class="category-img">
+              <img src="./resources/luffy1.jpg" alt="" />
+            </div>
+            <div class="category-type">
+              <h5>One Piece Figures</h5>
+            </div>
+          </div>
+        </div>
+        <div class="width-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">20 Products</div>
+            <div class="category-img">
+              <img src="./resources/zoro.jpg" alt="" />
+            </div>
+            <div class="category-type">
+              <h5>One Piece Figures</h5>
+            </div>
+          </div>
+        </div>
+        <div class="width-33 arrange-left">
+          <div class="category-item">
+            <div class="product-count">20 Products</div>
+            <div class="category-img">
+              <img src="./resources/luffy.jpg" alt="" />
+            </div>
+            <div class="category-type">
+              <h5>One Piece Figures</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
