added offer banners

--- a/index.html
+++ b/index.html
@@ -170,6 +170,28 @@
           </div>
         </div>
       </div>
+      <div class="wrapper next-row">
+        <div class="width-50 arrange-left">
+          <div class="offer-banner">
+            <img src="resources/itadori1.png" alt="" />
+            <div class="offer-text">
+              <h5>Rs. 200 flat discount on purchase of 1000</h5>
+              <h3>Wobble Head Collection</h3>
+              <button>Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="width-50 arrange-left">
+          <div class="offer-banner">
+            <img src="resources/itadori1.png" alt="" />
+            <div class="offer-text">
+              <h5>Rs. 200 flat discount on purchase of 1000</h5>
+              <h3>Wobble Head Collection</h3>
+              <button>Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
